samples/_failures_safe/1760885787_75dac9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2dfc139.c: In function ‘main’:
./samples/SAFE/__tmp_c2dfc139.c:192:20: error: missing terminating " character
  192 |             printf("Machine empty. Shutting down.\
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c2dfc139.c:192:13: error: expected expression at end of input
  192 |             printf("Machine empty. Shutting down.\
      |             ^~~~~~
./samples/SAFE/__tmp_c2dfc139.c:192:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c2dfc139.c:192:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c2dfc139.c:192:13: error: expected declaration or statement at end of input
